feature: crud informes institucionales

--- a/config.json
+++ b/config.json
@@ -13,6 +13,13 @@
         "Eliminar Ejecución del presupuesto",
         "Reporte anual financiero",
         "Nuevo Reporte anual financiero",
-        "Eliminar Reporte Financiero"
+        "Eliminar Reporte Financiero",
+        "Informes institucionales y de personal",
+        "Informes Institucionales",
+        "Informes Especiales de Auditoría",
+        "Informes anuales de auditoría",
+        "Histórico de informes de auditoría",
+        "Informe del archivo institucional",
+        "Informes de calificación del personal"
     ]
 }
