--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   flutter_svg: ^2.0.10+1
   file_picker: ^8.1.3
   toast_message_bar: ^0.0.3
+  flutter_localization: ^0.2.3
+  flutter_localizations:
+    sdk: flutter
 dev_dependencies:
   flutter_test:
     sdk: flutter
